src/test/scala/wacc/wacc_examples/invalid/semanticErr/classes/invalidPrivateAccess.wacc
# class contains instance of itself

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
    class MyClass {
        private int x
    }
    MyClass x = new MyClass { 5 } ;
    exit x.x
end
